--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "base": "NODE_PATH=. node",
+    "start:dev": "NODE_PATH=. pm2 start index.js",
+    "registerCommand": "npm run base deploy-commands.js | pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,9 +17,13 @@
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.33.4",
     "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "lodash": "^4.17.21",
+    "pino": "^8.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.17.0"
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
